# resumaker

./: .gitignore  Pipfile  README.md  make_resume.py  pyproject.toml  resumaker.py
jobs/: example_resume_job.yaml
resume_bodies/: blank_resume_body.yaml  blank_resume_body.yml
scripts/: make_resume.sh
src/resumaker/: __main__.py  resumaker.py
templates/: basic_template.docx  skills_and_research_highlight.docx  skills_highlight.docx
templates/sections/coursework/: coursework_simple.docx
templates/sections/education/: education_with_honors.docx
templates/sections/headers/: name_with_media_links.docx
templates/sections/projects/: projects_and_publications.docx
templates/sections/work_history/: employment_and_research.docx
