[project]
name = 'resumaker'
version = "0.0.1"
description = "Python package for creating and resumes from template and resume body files."
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = [
    "resume",
    "cv",
    "resume-templating",
    "resume-generation",
    "resume-builder",
    "resume-writer",
    "resume-maker",
    "resume-generator",
]
authors = [{ name = "Dylan Colli", email = "dylanfrankcolli@gmail.com" }]
maintainers = [{ name = "Dylan Colli", email = "dylanfrankcolli@gmail.com" }]
classifiers = []
dependencies = ["python-docx", "jinja2", "pyyaml", "docxtpl"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/dcolli23/resumaker"
Repository = "https://github.com/dcolli23/resumaker.git"
Issues = "https://github.com/dcolli23/resumaker/issues"

[tool.setuptools]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
